updated docs and tutorials

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -128,6 +128,7 @@
 <li><a href="pathpy/io/csv.html">pathpy.io.csv</a></li>
 <li><a href="pathpy/io/graphml.html">pathpy.io.graphml</a></li>
 <li><a href="pathpy/io/graphtool.html">pathpy.io.graphtool</a></li>
+<li><a href="pathpy/io/infomap.html">pathpy.io.infomap</a></li>
 <li><a href="pathpy/io/konect.html">pathpy.io.konect</a></li>
 <li><a href="pathpy/io/pandas.html">pathpy.io.pandas</a></li>
 <li><a href="pathpy/io/sql.html">pathpy.io.sql</a></li>
