--- a/_modules/pathpy/io/csv.html
+++ b/_modules/pathpy/io/csv.html
@@ -327,11 +327,11 @@
 
 <div class="viewcode-block" id="write"><a class="viewcode-back" href="../../../generated/pathpy.io.csv.write.html#pathpy.io.csv.write">[docs]</a><span class="k">def</span> <span class="nf">write</span><span class="p">(</span><span class="n">network</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="n">Network</span><span class="p">,</span> <span class="n">TemporalNetwork</span><span class="p">],</span>
           <span class="n">path_or_buf</span><span class="p">:</span> <span class="n">Any</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
-          <span class="n">exclude_edge_uid</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
+          <span class="n">include_edge_uid</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
           <span class="n">export_indices</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
           <span class="o">**</span><span class="n">pdargs</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
     <span class="sd">&quot;&quot;&quot;Stores all edges including edge attributes in a csv file.&quot;&quot;&quot;</span>
-    <span class="n">frame</span> <span class="o">=</span> <span class="n">to_dataframe</span><span class="p">(</span><span class="n">network</span><span class="o">=</span><span class="n">network</span><span class="p">,</span> <span class="n">exclude_edge_uid</span><span class="o">=</span><span class="n">exclude_edge_uid</span><span class="p">,</span>
+    <span class="n">frame</span> <span class="o">=</span> <span class="n">to_dataframe</span><span class="p">(</span><span class="n">network</span><span class="o">=</span><span class="n">network</span><span class="p">,</span> <span class="n">include_edge_uid</span><span class="o">=</span><span class="n">include_edge_uid</span><span class="p">,</span>
                          <span class="n">export_indices</span><span class="o">=</span><span class="n">export_indices</span><span class="p">)</span>
 
     <span class="k">return</span> <span class="n">write_dataframe</span><span class="p">(</span><span class="n">frame</span><span class="p">,</span> <span class="n">path_or_buf</span><span class="o">=</span><span class="n">path_or_buf</span><span class="p">,</span> <span class="o">**</span><span class="n">pdargs</span><span class="p">)</span></div>
