--- a/_modules/pathpy/algorithms/path_extraction.html
+++ b/_modules/pathpy/algorithms/path_extraction.html
@@ -129,23 +129,20 @@
 <span class="kn">from</span> <span class="nn">pathpy.core.api</span> <span class="kn">import</span> <span class="n">NodeCollection</span>
 <span class="kn">from</span> <span class="nn">pathpy.core.api</span> <span class="kn">import</span> <span class="n">EdgeCollection</span>
 <span class="kn">from</span> <span class="nn">pathpy.core.api</span> <span class="kn">import</span> <span class="n">PathCollection</span>
-
-<span class="kn">from</span> <span class="nn">pathpy.models.models</span> <span class="kn">import</span> <span class="p">(</span><span class="n">ABCDirectedAcyclicGraph</span><span class="p">,</span>
-                                  <span class="n">ABCTemporalNetwork</span><span class="p">)</span>
+<span class="kn">from</span> <span class="nn">pathpy.models.classes</span> <span class="kn">import</span> <span class="n">BaseTemporalNetwork</span>
+<span class="kn">from</span> <span class="nn">pathpy.models.models</span> <span class="kn">import</span> <span class="n">ABCDirectedAcyclicGraph</span>
 
 <span class="c1"># create logger</span>
 <span class="n">LOG</span> <span class="o">=</span> <span class="n">logger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
 
-
-<div class="viewcode-block" id="to_path_collection"><a class="viewcode-back" href="../../../generated/pathpy.algorithms.path_extraction.to_path_collection.html#pathpy.algorithms.path_extraction.to_path_collection">[docs]</a><span class="nd">@singledispatch</span>
-<span class="k">def</span> <span class="nf">to_path_collection</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">PathCollection</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Converts object to path collection&quot;&quot;&quot;</span>
+<div class="viewcode-block" id="extract_path_collection"><a class="viewcode-back" href="../../../generated/pathpy.algorithms.path_extraction.extract_path_collection.html#pathpy.algorithms.path_extraction.extract_path_collection">[docs]</a><span class="nd">@singledispatch</span>
+<span class="k">def</span> <span class="nf">extract_path_collection</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">PathCollection</span><span class="p">:</span>
     <span class="k">raise</span> <span class="ne">NotImplementedError</span></div>
 
-
-<span class="nd">@to_path_collection</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">ABCDirectedAcyclicGraph</span><span class="p">)</span>
-<span class="k">def</span> <span class="nf">_dag</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Convert a DAG to paths.&quot;&quot;&quot;</span>
+<span class="nd">@extract_path_collection</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">ABCDirectedAcyclicGraph</span><span class="p">)</span>
+<span class="k">def</span> <span class="nf">_dag_paths</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot;Calculates path statistics from a directed acyclic graph</span>
+<span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="c1"># check if dag is acyclic</span>
     <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">acyclic</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
@@ -163,18 +160,20 @@
     <span class="k">return</span> <span class="n">paths</span>
 
 
-<span class="nd">@to_path_collection</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">ABCTemporalNetwork</span><span class="p">)</span>
-<span class="k">def</span> <span class="nf">_temp</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+<span class="nd">@extract_path_collection</span><span class="o">.</span><span class="n">register</span><span class="p">(</span><span class="n">BaseTemporalNetwork</span><span class="p">)</span>
+<span class="k">def</span> <span class="nf">_temporal_paths</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Convert a temporal network to paths.&quot;&quot;&quot;</span>
     <span class="kn">from</span> <span class="nn">pathpy.models.directed_acyclic_graph</span> <span class="kn">import</span> <span class="n">DirectedAcyclicGraph</span>
 
     <span class="c1">#paths = PathCollection(edges=self.edges.copy())</span>
     <span class="n">paths</span> <span class="o">=</span> <span class="n">PathCollection</span><span class="p">()</span>
 
-    <span class="n">delta</span> <span class="o">=</span> <span class="n">kwargs</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;delta&#39;</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
+    <span class="n">delta</span> <span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="n">kwargs</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;delta&#39;</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
+
     <span class="c1"># generate a single time-unfolded DAG</span>
     <span class="n">dag</span> <span class="o">=</span> <span class="n">DirectedAcyclicGraph</span><span class="o">.</span><span class="n">from_temporal_network</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">delta</span><span class="o">=</span><span class="n">delta</span><span class="p">)</span>
 
+    <span class="c1"># extract causal tree for each root node</span>
     <span class="k">for</span> <span class="n">root</span> <span class="ow">in</span> <span class="n">dag</span><span class="o">.</span><span class="n">roots</span><span class="p">:</span>
         <span class="n">causal_tree</span> <span class="o">=</span> <span class="n">_causal_tree</span><span class="p">(</span><span class="n">dag</span><span class="p">,</span> <span class="n">root</span><span class="p">)</span>
 
@@ -190,7 +189,9 @@
 
 
 <span class="k">def</span> <span class="nf">_causal_tree</span><span class="p">(</span><span class="n">dag</span><span class="p">,</span> <span class="n">root</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Generate a causal tree&quot;&quot;&quot;</span>
+    <span class="sd">&quot;&quot;&quot; Generates a causal tree in a DAG, starting from a </span>
+<span class="sd">    given root node</span>
+<span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">LOG</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s1">&#39;Generate causal tree for root: </span><span class="si">%s</span><span class="s1">&#39;</span><span class="p">,</span> <span class="n">root</span><span class="o">.</span><span class="n">uid</span><span class="p">)</span>
     <span class="kn">from</span> <span class="nn">pathpy.models.directed_acyclic_graph</span> <span class="kn">import</span> <span class="n">DirectedAcyclicGraph</span>
 
