--- a/_modules/pathpy/processes/random_walk.html
+++ b/_modules/pathpy/processes/random_walk.html
@@ -706,6 +706,31 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">nan_to_num</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_first_order_visitations</span><span class="o">/</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_t</span><span class="o">+</span><span class="mi">1</span><span class="p">))</span>
 
+<div class="viewcode-block" id="HigherOrderRandomWalk.first_order_stationary_state"><a class="viewcode-back" href="../../../generated/pathpy.processes.random_walk.HigherOrderRandomWalk.html#pathpy.processes.random_walk.HigherOrderRandomWalk.first_order_stationary_state">[docs]</a>    <span class="k">def</span> <span class="nf">first_order_stationary_state</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">:</span>
+        <span class="sd">&quot;&quot;&quot;Returns current normalized visitation frequencies of first-order nodes based on the history of</span>
+<span class="sd">        the higher-order random walk. Initially, all visitation probabilities are zero except for the last node of the higher-order seed node.</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">first_order_stationary_state</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">ravel</span><span class="p">(</span>
+            <span class="n">np</span><span class="o">.</span><span class="n">zeros</span><span class="p">(</span><span class="n">shape</span><span class="o">=</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_first_order_network</span><span class="o">.</span><span class="n">number_of_nodes</span><span class="p">())))</span>
+        <span class="n">higher_order_stationary_dist</span> <span class="o">=</span> <span class="n">RandomWalk</span><span class="o">.</span><span class="n">stationary_state</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
+        <span class="k">for</span> <span class="n">v</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_network</span><span class="o">.</span><span class="n">nodes</span><span class="p">:</span>
+            <span class="c1"># newly visited node in first_order network</span>
+            <span class="n">v1</span> <span class="o">=</span> <span class="n">v</span><span class="o">.</span><span class="n">nodes</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
+            <span class="n">first_order_stationary_state</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">_first_order_network</span><span class="o">.</span><span class="n">nodes</span><span class="o">.</span><span class="n">index</span><span class="p">[</span><span class="n">v1</span><span class="o">.</span><span class="n">uid</span><span class="p">]]</span> <span class="o">+=</span> <span class="n">higher_order_stationary_dist</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">_network</span><span class="o">.</span><span class="n">nodes</span><span class="o">.</span><span class="n">index</span><span class="p">[</span><span class="n">v</span><span class="o">.</span><span class="n">uid</span><span class="p">]]</span>
+        <span class="k">return</span> <span class="n">first_order_stationary_state</span></div>
+
+    <span class="nd">@property</span>
+    <span class="k">def</span> <span class="nf">first_order_total_variation_distance</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">float</span><span class="p">:</span>
+        <span class="sd">&quot;&quot;&quot;Returns the total variation distance between stationary </span>
+<span class="sd">        visitation probabilities and the current visitation frequencies, projected</span>
+<span class="sd">        to nodes in the first_order_network.</span>
+
+<span class="sd">        Computes the total variation distance between the current (first-order) node visitation</span>
+<span class="sd">        probabilities and the (first-order) stationary node visitation probabilities. This quantity converges to zero for HigherOrderRandomWalk.time -&gt; np.infty and its magnitude indicates the</span>
+<span class="sd">        current relaxation of the higher-order random walk process.</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">TVD</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">first_order_stationary_state</span><span class="p">(),</span> <span class="bp">self</span><span class="o">.</span><span class="n">first_order_visitation_frequencies</span><span class="p">)</span>
+
 
 <div class="viewcode-block" id="HigherOrderRandomWalk.first_order_node"><a class="viewcode-back" href="../../../generated/pathpy.processes.random_walk.HigherOrderRandomWalk.html#pathpy.processes.random_walk.HigherOrderRandomWalk.first_order_node">[docs]</a>    <span class="k">def</span> <span class="nf">first_order_node</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">higher_order_node</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
         <span class="sd">&quot;&quot;&quot;</span>
