--- a/_modules/pathpy/statistics/degrees.html
+++ b/_modules/pathpy/statistics/degrees.html
@@ -409,7 +409,7 @@
     <span class="k">return</span> <span class="n">_mrf</span></div>
 
 
-<div class="viewcode-block" id="degree_assortativity"><a class="viewcode-back" href="../../../generated/pathpy.statistics.degrees.degree_assortativity.html#pathpy.degree_assortativity">[docs]</a><span class="k">def</span> <span class="nf">degree_assortativity</span><span class="p">(</span><span class="n">network</span><span class="p">:</span> <span class="n">Network</span><span class="p">,</span> <span class="n">mode</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s1">&#39;in&#39;</span><span class="p">,</span> <span class="n">weight</span><span class="p">:</span> <span class="n">Weight</span> <span class="o">=</span> <span class="kc">None</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">float</span><span class="p">:</span>
+<div class="viewcode-block" id="degree_assortativity"><a class="viewcode-back" href="../../../generated/pathpy.statistics.degrees.degree_assortativity.html#pathpy.degree_assortativity">[docs]</a><span class="k">def</span> <span class="nf">degree_assortativity</span><span class="p">(</span><span class="n">network</span><span class="p">:</span> <span class="n">Network</span><span class="p">,</span> <span class="n">mode</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s1">&#39;total&#39;</span><span class="p">,</span> <span class="n">weight</span><span class="p">:</span> <span class="n">Weight</span> <span class="o">=</span> <span class="kc">None</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">float</span><span class="p">:</span>
     <span class="sd">&quot;&quot;&quot;Calculates the degree assortativity coefficient of a network.</span>
 
 <span class="sd">    Parameters</span>
@@ -427,6 +427,8 @@
         <span class="n">d</span> <span class="o">=</span> <span class="n">network</span><span class="o">.</span><span class="n">indegrees</span><span class="p">(</span><span class="n">weight</span><span class="p">)</span>
     <span class="k">elif</span> <span class="n">network</span><span class="o">.</span><span class="n">directed</span> <span class="ow">and</span> <span class="n">mode</span> <span class="o">==</span> <span class="s1">&#39;out&#39;</span><span class="p">:</span>
         <span class="n">d</span> <span class="o">=</span> <span class="n">network</span><span class="o">.</span><span class="n">outdegrees</span><span class="p">(</span><span class="n">weight</span><span class="p">)</span>
+    <span class="k">elif</span> <span class="n">network</span><span class="o">.</span><span class="n">directed</span> <span class="ow">and</span> <span class="n">mode</span> <span class="o">==</span> <span class="s1">&#39;total&#39;</span><span class="p">:</span>
+        <span class="n">d</span> <span class="o">=</span> <span class="n">network</span><span class="o">.</span><span class="n">degrees</span><span class="p">(</span><span class="n">weight</span><span class="p">)</span>
     <span class="k">elif</span> <span class="ow">not</span> <span class="n">network</span><span class="o">.</span><span class="n">directed</span><span class="p">:</span>
         <span class="n">m</span> <span class="o">=</span> <span class="n">m</span><span class="o">/</span><span class="mf">2.</span>
     <span class="n">idx</span> <span class="o">=</span> <span class="n">network</span><span class="o">.</span><span class="n">nodes</span><span class="o">.</span><span class="n">index</span>
